[gd_scene load_steps=4 format=2]

[ext_resource path="res://StartScreen/StartBanner.png" type="Texture" id=1]
[ext_resource path="res://StartScreen/editContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://StartScreen/StartScreen.gd" type="Script" id=3]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 135.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 36.0
margin_right = 135.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 135.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="Menu/CenterRow/VBoxContainer"]
margin_right = 135.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "OPTIONS"
flat = true

[node name="OptionsPopup" type="Popup" parent="Menu/CenterRow/VBoxContainer/OptionsButton"]
margin_right = 130.0
margin_bottom = 130.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ItemList" type="ItemList" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup/HBoxContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 125.0
rect_min_size = Vector2( 120, 120 )
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "RoomSize", null, false, "RoomCount", null, false, "Difficulty", null, false ]
auto_height = true
icon_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup/HBoxContainer/ItemList"]
margin_left = 85.0
margin_top = 6.0
margin_right = 125.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="roomSizeLabel" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup/HBoxContainer/ItemList/VBoxContainer" instance=ExtResource( 2 )]

[node name="roomCountLabel" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup/HBoxContainer/ItemList/VBoxContainer" instance=ExtResource( 2 )]

[node name="difficultyLabel" parent="Menu/CenterRow/VBoxContainer/OptionsButton/OptionsPopup/HBoxContainer/ItemList/VBoxContainer" instance=ExtResource( 2 )]

[node name="NewGameButton" type="Button" parent="Menu/CenterRow/VBoxContainer"]
margin_top = 28.0
margin_right = 135.0
margin_bottom = 52.0
text = "New Game"
flat = true
